--- a/assets/templates/crypto-b/templates/terms.html
+++ b/assets/templates/crypto-b/templates/terms.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Trading Guide - Plus500Crypto</title>
+  <title>Trading Guide - +500crypto</title>
   <link rel="stylesheet" href="../css/style.min.css">
   <link href="https://fonts.googleapis.com/css?family=PT+Sans" rel="stylesheet">
 </head>
@@ -49,36 +49,36 @@
           <li>You agree that you will not use the products and services to engage in any activites listed on the Prohibited Activities list</li>
           <li>Your account may be terminated if you provide false information or refuse to provide information about your true identity.</li>
           <li>You agree and consent to receive communications from Luno via email and SMS.</li>
-          <li>Plus500Crypto may change the Terms of Use at any time for any reason without notice.</li>
+          <li>+500crypto may change the Terms of Use at any time for any reason without notice.</li>
         </ul>
-        <b>Plus500Crypto Wallet</b>
+        <b>+500crypto Wallet</b>
         <ul>
-          <li>The Bitcoin network is responsible for confirming Bitcoin transactions and Plus500Crypto is not liable for any loss due to, but not limited to, errors in the protocol, delays or any other breakdown relating to the Bitcoin network.</li>
-          <li>You acknowledge that Plus500Crypto cannot confirm, cancel or reverse Bitcoin transactions.</li>
-          <li>You expressly agree that Plus500Crypto is not liable for any errors, loss or omissions due to sending Bitcoin to or receiving Bitcoin from incorrect wallet addresses, e-mail addresses, entering incorrect transaction amounts, or any other information related to Bitcoin transactions by using the service. Please ensure that you use the correct Bitcoin addresses, e-mail addresses, transaction amounts when transacting.</li>
-          <li>Bitcoin is securely stored in a combination of online and offline storage. As a result it may take up to 48 hours or more to facilitate Bitcoin transactions. By using Plus500Crypto you accept the risk that transactions may be delayed and you agree not to hold Plus500Crypto liable for any damages or loss due to delays.</li>
+          <li>The Bitcoin network is responsible for confirming Bitcoin transactions and +500crypto is not liable for any loss due to, but not limited to, errors in the protocol, delays or any other breakdown relating to the Bitcoin network.</li>
+          <li>You acknowledge that +500crypto cannot confirm, cancel or reverse Bitcoin transactions.</li>
+          <li>You expressly agree that +500crypto is not liable for any errors, loss or omissions due to sending Bitcoin to or receiving Bitcoin from incorrect wallet addresses, e-mail addresses, entering incorrect transaction amounts, or any other information related to Bitcoin transactions by using the service. Please ensure that you use the correct Bitcoin addresses, e-mail addresses, transaction amounts when transacting.</li>
+          <li>Bitcoin is securely stored in a combination of online and offline storage. As a result it may take up to 48 hours or more to facilitate Bitcoin transactions. By using +500crypto you accept the risk that transactions may be delayed and you agree not to hold +500crypto liable for any damages or loss due to delays.</li>
         </ul>
-        <b>Plus500Crypto Exchange</b>
+        <b>+500crypto Exchange</b>
         <ul>
           <li>You must be at least 18 years old to use trade on the exchange.</li>
           <li>Any information that you provide must be true, accurate and correct.</li>
           <li>You must be resident in one of our supported countries to register and use the service.</li>
           <li>You acknowledge that trading Bitcoin involves large risks and could result in significant financial losses.</li>
-          <li>Plus500Crypto does not accept cash payments. Cash deposits to our bank account may be delayed and will incur additional processing fees.</li>
-          <li>Incoming payments to Plus500Crypto must be done by means of electronic funds transfer (EFT) from your bank account in your country of residence. The bank account must be opened in your own name.</li>
-          <li>Outgoing payments from Plus500Crypto can only be done by means of electronic funds transfer (EFT) to your confirmed bank account in your country of residence. The bank account must be opened in your own name.</li>
-          <li>Plus500Crypto does not guarantee Bitcoin or bank transfer disbursement times and will not be liable for any delays.</li>
+          <li>+500crypto does not accept cash payments. Cash deposits to our bank account may be delayed and will incur additional processing fees.</li>
+          <li>Incoming payments to +500crypto must be done by means of electronic funds transfer (EFT) from your bank account in your country of residence. The bank account must be opened in your own name.</li>
+          <li>Outgoing payments from +500crypto can only be done by means of electronic funds transfer (EFT) to your confirmed bank account in your country of residence. The bank account must be opened in your own name.</li>
+          <li>+500crypto does not guarantee Bitcoin or bank transfer disbursement times and will not be liable for any delays.</li>
           <li>You must provide security for trading Bitcoin by funding your account in advance of trading.</li>
           <li>Trade orders placed on the site are binding and cannot be cancelled or reversed.</li>
-          <li>Plus500Crypto has no obligation to accept orders, in which case the site will not allow the order to be placed.</li>
+          <li>+500crypto has no obligation to accept orders, in which case the site will not allow the order to be placed.</li>
           <li>Orders, deposits and withdrawals are subject to limits which may be changed over time.</li>
-          <li>Plus500Crypto may suspend your account at any time for any reason.</li>
-          <li>This service is provided without warranty of any kind and Plus500Crypto does not guarantee that the site will be available 100% of the time. You acknowledge and accept that the website may become unavailable from time to time due to various circumstances and that Plus500Crypto will not be liable for any losses due to the system or service becoming unavailable.</li>
-          <li>Plus500Crypto cannot and does not guarantee the value of Bitcoin and has no obligation to buy back Bitcoin at any time.</li>
+          <li>+500crypto may suspend your account at any time for any reason.</li>
+          <li>This service is provided without warranty of any kind and +500crypto does not guarantee that the site will be available 100% of the time. You acknowledge and accept that the website may become unavailable from time to time due to various circumstances and that +500crypto will not be liable for any losses due to the system or service becoming unavailable.</li>
+          <li>+500crypto cannot and does not guarantee the value of Bitcoin and has no obligation to buy back Bitcoin at any time.</li>
           <li>It is your responsibility to determine, account and pay for any taxes that apply to your trading and Bitcoin transactions.</li>
         </ul>
         <b>Prohibited Activities</b>
-        <b>You may not use Plus500Crypto products or services to engage in any of the following activities:</b>
+        <b>You may not use +500crypto products or services to engage in any of the following activities:</b>
         <ul>
           <li>Violation of any laws, statutes, ordinances or regulations.</li>
           <li>Paying into or otherwise supporting pyramid schemes, Ponzi schemes, matrix programs, "get rich quick" schemes, multi-level marketing programs or high-yield investment programs (HYIP).</li>
@@ -98,7 +98,7 @@
             </ul>
           </li>
         </ul>
-        <b>You may not use Plus500Crypto products or services to engage in any of the following activities unless pre-approved by Plus500Crypto:</b>
+        <b>You may not use +500crypto products or services to engage in any of the following activities unless pre-approved by +500crypto:</b>
         <ul class="page-header--pb">
           <li>Operating as a money transmitter, payment service provider, e-money or any other financial service business.</li>
           <li>Offering gambling or gaming services.</li>
