--- a/assets/templates/crypto-b/templates/trading.html
+++ b/assets/templates/crypto-b/templates/trading.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Trading Guide - Plus500Crypto</title>
+  <title>Trading Guide - +500crypto</title>
   <link rel="stylesheet" href="../css/style.min.css">
   <link href="https://fonts.googleapis.com/css?family=PT+Sans" rel="stylesheet">
 </head>
@@ -42,18 +42,18 @@
       <div class="page-header__rules">
         <h1>Trading Guide</h1>
         <b>Bitcoin Trading</b>
-        <p>Plus500Crypto is a trusted platform for trading Bitcoins. The exchange provides fast order execution, low spread,<br>and access to high liquidity orderbook for top currency pairs on the market. Cross-platform trading is realised via website,<br>mobile app, and several API solutions. Safety of assets and data are backed by high security standards and advanced legal compliance.</p>
-        <p>To start trading on Plus500Crypto follow the steps</p>
-        <b>Sign up with Plus500Crypto</b>
-        <p>It will take you only a few steps to register and get an account on Plus500Crypto Bitcoin exchange.</p>
+        <p>+500crypto is a trusted platform for trading Bitcoins. The exchange provides fast order execution, low spread,<br>and access to high liquidity orderbook for top currency pairs on the market. Cross-platform trading is realised via website,<br>mobile app, and several API solutions. Safety of assets and data are backed by high security standards and advanced legal compliance.</p>
+        <p>To start trading on +500crypto follow the steps</p>
+        <b>Sign up with +500crypto</b>
+        <p>It will take you only a few steps to register and get an account on +500crypto Bitcoin exchange.</p>
         <b>Deposit funds</b>
         <p>Fund account with your payment card or via bank transfer. We accept VISA and MasterCard.</p>
         <b>Start trading</b>
         <p>Trade Bitcoin via website interface, mobile app or using automated trading solutions.</p>
         <b>Commission</b>
-        <p>Plus500Crypto exchange charges variable commissions of 0% to 0.2%, depending on the trading pair.<br>Special conditions are discussable for high-volume traders. Volume-based trade fees are coming soon.</p>
-        <b>Plus500Crypto API</b>
-        <p>Plus500Crypto provides several API solutions for automated trading based on needs of individuals and institutions.<br>REST API is a basic tool for quick access to Plus500Crypto market data and automated trade management.<br>WebSocket API with full trading functionality is mainly used by professional traders.<br>Finally, FIX API is the best solution for institutional traders to connect trading systems to a source of Bitcoin liquidity.</p>
+        <p>+500crypto exchange charges variable commissions of 0% to 0.2%, depending on the trading pair.<br>Special conditions are discussable for high-volume traders. Volume-based trade fees are coming soon.</p>
+        <b>+500crypto API</b>
+        <p>+500crypto provides several API solutions for automated trading based on needs of individuals and institutions.<br>REST API is a basic tool for quick access to +500crypto market data and automated trade management.<br>WebSocket API with full trading functionality is mainly used by professional traders.<br>Finally, FIX API is the best solution for institutional traders to connect trading systems to a source of Bitcoin liquidity.</p>
         <b>Key Advantages</b>
         <ul>
           <li>safe cryptocurrency cold storage and financial viability</li>
