--- a/assets/templates/crypto-b/index.html
+++ b/assets/templates/crypto-b/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Plus500Crypto</title>
+  <title>+500crypto</title>
   <link rel="stylesheet" href="css/style.min.css">
   <!-- <link href="https://fonts.googleapis.com/css?family=PT+Sans" rel="stylesheet"> -->
 </head>
@@ -49,7 +49,7 @@
           Walk on the path to success.<br>Buy, sell and trade cryptocurrencies
         </div>
         <div class="trade__right-column">
-          With Plus500Crypto,<br>you can easily change any blockchain<br>leading asset for any other and it is<br>100% secured and fast
+          With +500crypto,<br>you can easily change any blockchain<br>leading asset for any other and it is<br>100% secured and fast
         </div>
       </div>
     </div>
@@ -79,16 +79,16 @@
     <div class="container">
       <div class="news__flex">
         <div class="news__left-column">
-          <b>WHY Plus500Crypto</b>
-          <p>Plus500Crypto offers traders a wide range of possibilities. We offer a better way to move money, as people all over the world now, make use of digital currencies to send money across the world irrespective of your geographical location. This way is faster, easier and cheaper to use than paper money. Investing in digital currencies also ensures financial freedom, as no single entity or government policy controls it. </p>
+          <b>WHY +500crypto</b>
+          <p>+500crypto offers traders a wide range of possibilities. We offer a better way to move money, as people all over the world now, make use of digital currencies to send money across the world irrespective of your geographical location. This way is faster, easier and cheaper to use than paper money. Investing in digital currencies also ensures financial freedom, as no single entity or government policy controls it. </p>
         </div>
         <div class="news__middle-column">
           <b>A NEW TYPE OF INVECTMENT</b>
-          <p>The emergence of cryptocurrencies into the market is something every trader is excited about. This is because of the ease and transparency involved in the use of digital currencies. When you think of trading cryptocurrencies you should think of cryptologic. Plus500Crypto web socket feeds allows you to easily gain access to real-time market data and our trading API helps you develop safe programmatic trading bots.</p>
+          <p>The emergence of cryptocurrencies into the market is something every trader is excited about. This is because of the ease and transparency involved in the use of digital currencies. When you think of trading cryptocurrencies you should think of cryptologic. +500crypto web socket feeds allows you to easily gain access to real-time market data and our trading API helps you develop safe programmatic trading bots.</p>
         </div>
         <div class="news__right-column">
           <b>FRIENDLY INTERFACE</b>
-          <p>Plus500Crypto offers a very friendly and unique interface to trade on. Our amazing platform simplifies trading and makes the experience a great one for every trader. You can easily customize your interface. Arrange and organize your workspace as it suits you from theme selection, compose layouts, notifications set up and lots more. With Plus500Crypto trading is on a whole new level entirely. Sign up today.</p>
+          <p>+500crypto offers a very friendly and unique interface to trade on. Our amazing platform simplifies trading and makes the experience a great one for every trader. You can easily customize your interface. Arrange and organize your workspace as it suits you from theme selection, compose layouts, notifications set up and lots more. With +500crypto trading is on a whole new level entirely. Sign up today.</p>
         </div>
       </div>
     </div>
@@ -106,7 +106,7 @@
     <div class="container container--trading">
       <div class="trading__flex">
         <h2>NO EXPERIENCE?</h2>
-        <p>You have no worries. Are you thinking of venturing into the world of cryptocurrency trading? Plus500Crypto has you covered; So sign up today and get a demo account. A demo account will prepare and teach you what to expect in the real market. We also have already prepared educational tool from top professionals to enhance your knowledge about trading. 
+        <p>You have no worries. Are you thinking of venturing into the world of cryptocurrency trading? +500crypto has you covered; So sign up today and get a demo account. A demo account will prepare and teach you what to expect in the real market. We also have already prepared educational tool from top professionals to enhance your knowledge about trading. 
 </p>
       </div>
     </div>
