--- a/assets/templates/crypto-b/templates/about.html
+++ b/assets/templates/crypto-b/templates/about.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>About Us - Plus500Crypto</title>
+  <title>About Us - +500crypto</title>
   <link rel="stylesheet" href="../css/style.min.css">
   <link href="https://fonts.googleapis.com/css?family=PT+Sans" rel="stylesheet">
 </head>
@@ -41,8 +41,8 @@
     <div class="container">
       <div class="page-header__rules">
         <h1>About Us</h1>
-        <p>Plus500Crypto is a multi-functional digital currency exchange that is highly trust worthy. It offers a cross-platform trading via website,<br>mobile application, web socket and API providing accesss to high liquidity orderbook for top currency pairs on the market.<br>Very fast Bitcoin buying and selling is possible through simplified bundle interface. The exchange has developed a multi-level account<br>system with individual approach to each customer, from Bitcoin learner to institutional professional traders.</p>
-        <p class="page-header--pb">With Plus500Crypto you get worldwide coverage, mulitiple payement options, and 24/7 support accompanied by time-proven platform<br>stability that guarantees safty of assets and data. We provide all individuals and businesses a  world class experience to trade Bitcoin<br>and other crypto currencies. Plus500Crypto is absolutely the go-to site for traders and investors when you demand a quick trade transaction,<br>stable wallets and advanced security practices. Plus500Crypto is the right place to be!</p>
+        <p>+500crypto is a multi-functional digital currency exchange that is highly trust worthy. It offers a cross-platform trading via website,<br>mobile application, web socket and API providing accesss to high liquidity orderbook for top currency pairs on the market.<br>Very fast Bitcoin buying and selling is possible through simplified bundle interface. The exchange has developed a multi-level account<br>system with individual approach to each customer, from Bitcoin learner to institutional professional traders.</p>
+        <p class="page-header--pb">With +500crypto you get worldwide coverage, mulitiple payement options, and 24/7 support accompanied by time-proven platform<br>stability that guarantees safty of assets and data. We provide all individuals and businesses a  world class experience to trade Bitcoin<br>and other crypto currencies. +500crypto is absolutely the go-to site for traders and investors when you demand a quick trade transaction,<br>stable wallets and advanced security practices. +500crypto is the right place to be!</p>
       </div>
     </div>
   </header>
