--- a/assets/templates/crypto-b/templates/login.html
+++ b/assets/templates/crypto-b/templates/login.html
@@ -6,7 +6,6 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Registration - +500crypto</title>
   <link rel="stylesheet" href="../css/style.min.css">
-  <link href="https://fonts.googleapis.com/css?family=PT+Sans" rel="stylesheet">
 </head>
 <body>
   <header class="page-header  page-header--blue  page-header--height">
@@ -16,8 +15,8 @@
           <div class="page-header__flex  page-header__flex--center">
             <div class="page-header__logo">
               <a href="../index.html">
-                <img class="page-header__logo-b" src="../img/logo.png" alt="CryptoLogic">
-                <img class="page-header__logo-s" src="../img/logo-s.png" alt="CryptoLogic">
+                <img class="page-header__logo" src="../img/logo.png" alt="CryptoLogic">
+                <!-- <img class="page-header__logo-s" src="../img/logo-s.png" alt="CryptoLogic"> -->
               </a>
             </div>
           </div>
