--- a/assets/templates/crypto-b/css/style.css
+++ b/assets/templates/crypto-b/css/style.css
@@ -276,10 +276,7 @@ form a {
   background-size: cover; }
 
 .page-header__logo {
-  margin-top: 10px; }
-
-.page-header__logo-s {
-  display: none; }
+  margin-top: 5px; }
 
 .page-header__flex {
   display: -webkit-box;
@@ -339,11 +336,8 @@ form a {
   .container {
     width: 95%; }
   .page-header__logo {
-    margin-top: 20px; }
-  .page-header__logo-b {
-    display: none; }
-  .page-header__logo-s {
-    display: block; }
+    width: 250px;
+    margin-top: 5px; }
   .page-header__nav {
     min-height: 125px; }
   .page-header__item {
@@ -363,7 +357,8 @@ form a {
   .page-header__main-nav {
     display: none; }
   .page-header__nav-list {
-    width: 100%; }
+    width: 100%;
+    margin-top: 15px; }
   .page-header__main-nav--s {
     display: block; }
   .page-header__nav--form {
@@ -385,11 +380,8 @@ form a {
   .page-header {
     min-height: 890px; }
   .page-header__logo {
-    margin-top: 20px; }
-  .page-header__logo-b {
-    display: none; }
-  .page-header__logo-s {
-    display: block; }
+    width: 250px;
+    margin-top: 15px; }
   .page-header__main-nav {
     display: none; }
   .page-header__main-nav--s {
