--- a/assets/templates/crypto-b/templates/registration.html
+++ b/assets/templates/crypto-b/templates/registration.html
@@ -6,18 +6,17 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Registration - +500crypto</title>
   <link rel="stylesheet" href="../css/style.min.css">
-  <link href="https://fonts.googleapis.com/css?family=PT+Sans" rel="stylesheet">
 </head>
 <body>
-  <header class="page-header  page-header--blue">
+  <header class="page-header  page-header--blue  page-header--height">
     <div class="page-header__head">
       <nav class="page-header__nav  page-header__nav--form">
         <div class="container">
           <div class="page-header__flex  page-header__flex--center">
             <div class="page-header__logo">
               <a href="../index.html">
-                <img class="page-header__logo-b" src="../img/logo.png" alt="CryptoLogic">
-                <img class="page-header__logo-s" src="../img/logo-s.png" alt="CryptoLogic">
+                <img class="page-header__logo" src="../img/logo.png" alt="CryptoLogic">
+                <!-- <img class="page-header__logo-s" src="../img/logo-s.png" alt="CryptoLogic"> -->
               </a>
             </div>
           </div>
