--- a/assets/templates/crypto/index.html
+++ b/assets/templates/crypto/index.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>CryptoLogi</title>
   <link rel="stylesheet" href="css/styll.css">
-  <link rel="stylesheet" href="css/adaptiv.css">
+  <link rel="stylesheet" href="css/adapti.css">
   <!-- <link href="https://fonts.googleapis.com/css?family=PT+Sans" rel="stylesheet"> -->
 </head>
 <body>
@@ -32,7 +32,7 @@
   </header>
   <section class="info">
     <div class="container">
-      <div class="container__adv">
+      <div class="container__info">
         <div class="flex-btn">
           <h1 class="info__title">Cryptologi the science of<br>trading cryptocurrency</h1>
           <p class="info__text">Cryptologi presents investors a unique opportunity<br>to trade or exchange digital assets<br>with ease on a 24/7 basic.</p>
