--- a/assets/templates/crypto/css/adapti.css
+++ b/assets/templates/crypto/css/adapti.css
@@ -17,6 +17,11 @@
 }
 
 @media only screen and (min-width : 1201px) and (max-width : 1499px){
+  .container__info {
+    width: 77%;
+    margin: 0 auto;
+  }
+  
   .page-header__flex-container {
     justify-content: space-around;
     margin-left: 50px;
@@ -293,8 +298,9 @@
   }
 
   .info__link {
+    display: block;
     margin: 0 40px;
-    margin-bottom: 80px;
+    /* margin-bottom: 80px; */
     font-size: 20px;
     text-align: center;
   }
