--- a/assets/templates/crypto/css/adapti.css
+++ b/assets/templates/crypto/css/adapti.css
@@ -281,6 +281,15 @@
   .form__check input {
     left: -240px;
   }
+  
+  /* Template */
+  .page-main--careers p {
+    width: auto;
+  }
+  
+  .container__adv--pm {
+    width: auto;
+  }
 }
 
 @media only screen and (min-width : 320px) and (max-width : 568px) {
