--- a/assets/templates/crypto/template/careers.html
+++ b/assets/templates/crypto/template/careers.html
@@ -4,9 +4,9 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>About Us - Cryptologi</title>
+  <title>Careers - Cryptologi</title>
   <link rel="stylesheet" href="../css/styll.css">
-  <link rel="stylesheet" href="../css/adaptiv.css">
+  <link rel="stylesheet" href="../css/adapti.css">
   <link href="https://fonts.googleapis.com/css?family=PT+Sans" rel="stylesheet">
 </head>
 <body>
@@ -32,22 +32,23 @@
   </header>
   <main class="page-main  page-main--careers">
     <div class="container">
-      <div class="container__adv  container__adv--pm">
+      <div class="container__info  container__adv--pm">
         <h1>Be a part of our amazing team</h1>
-        <p>Bitcoin and Ethereum are fast transforming and changing the global finacial statosphere and Cryptologi team is right position of this revolution. Cryptologi is a global financial trading company with an internatinal team of experts that strongly believes in the strength of diversity and sustainability of teamwork and professionalism. At Cryptologi our values are that of Community, Quality and  Efficiency. All these are the driving force behind everything we do and have helped us become the fast-moving, customer-focused company we are today. These important attributes define who we are, why we will win and also what makes us a unique and fun place to work at:</p>
+        <p>Bitcoin and Ethereum are fast transforming and changing the global finacial statosphere and Cryptologi team is rightly positioned at this revolution. Cryptologi is a global financial trading company with an internatinal team of experts that profer solutions to all forms of challenges a trader or investor might encounter in the process of trading. The team of individuals that work for us are always quick to do and well experienced in different areas as partaining to trading. We learn from each other and inspire one another in different ways. At Cryptologi our ideas and values are centered around a properly efficient and fuctioning community. This drives and propels our community towards success, and our achievements are remarkable and mind blowing. All these qualities define what we stand for, and what makes us distinct from any other finsncial trading company.</p>
         <p class="page-main__about--title">A community oriented company.</p>
-        <p>In Cryptolgi our first and topmost priority is caring and meeting to the needs of our customers, and offering them the best of services with no sort of limitation or difficulty. Here we work as a team to achieve all our targets. Considering how new this technology is and the massive impact it will have, we have a broader responsibility to society to ensure we bring it to the world in a responsible and consultative manner.</p>
+        <p>In Cryptolgi our first and topmost priority is caring and meeting to the needs of our customers, and offering them the best of services with no sort of limitation or difficulty. Here we work as a team to accomplish all our set targets and goals. We are fully aware of the positive impact the technology behind cryptocurrencies will have on the economy. We are therefore responsible in ensuring it comes to the limelight and available to people in a responsible and appropraite manner.</p>
         <p class="page-main__about--title">High quality obsession.</p>
-        <p>This means the quality of the people in our team, and also ensuring we only hire the best. It extends to being obsessed with the quality of our products, and the quality of our processes. We pay a high attention to detail and take a lot of pride in the things we do.</p>
+        <p>This refers to the type of people we have on our team. To a very large extent every member of our team are all professionals in their various fields. We do everything in our power to hire the best of the best. We have a very high standed when it comes to employmet and requitment of staff and personel. We pay a high attention to detail and take a lot of pride in the things we do.</p>
         <p class="page-main__about--title">We’re characterized by distinctive efficiency.</p>
-        <p>At cryptologi everything we do is geared toward efficiency. This means we don't waste any of our resources. We are very quick in making the right decisions. As a member of this team you are most certain to get right up-to date informations. The kind of relationship that exsist between each and every member is the best there is.</p>
+        <p>Cryptologi everything we do is geared toward efficiency. This means we don't waste any of our resources. We are very quick in making the right decisions. As a member of this team you are most certain to get right up-to date informations. The kind of relationship that exsist between each and every member is the best there is.</p>
         <h1>Job type</h1>
-        <p class="page-main__careers--title">1. Country associate</p>
-        <p>Cryptologi is a top world class cryptocuurency company that operates in more than 40 countries all over the globe, with offices located in strategic places in the different continents in the world. Cryptologi is a company that has been tested and trusted by many top brokers and financial investors, and many have long fallen in love with this financial company. The different services we offer to our clients on a daily basis makes trading simple and fun. With Cryptologi you have nothing to worry about all transactions are 100% secure. Our number one priority is satisfying the need of every of our customers.</p>
+        <p class="page-main__careers--title">1. country associate – Cyprus</p>
+        <p>at Cryptologi</p>
+        <p>Cryptologi is a top world class cryptocuurency company that operates in several  tcountries all over the globe, with offices located in strategic places in the different continents in the world. Cryptologi is a company that has been tested and trusted by many top brokers and financial investors, and many have long fallen in love with this financial company. The different services we offer to our clients on a daily basis makes trading simple and fun. With Cryptologi you have nothing to worry about all transactions are 100% secure. Our number one priority is satisfying the need of every of our customers.</p>
         <p class="page-main__about--title">What you’ll do</p>
         <ul>
           <li>Take ownership of the market and drive market leadership & success</li>
-          <li>Shape local Cryptologi's strategy through industry & competitor analysis</li>
+          <li>Shape local Cryptologi's strategy through industry & competitor analysis</li>
           <li>Own local product strategy for the market</li>
           <li>Develop and execute local marketing campaigns</li>
           <li>Develop and maintain relationships with key stakeholders in market - regulators, partners, banks, merchants, media</li>
@@ -69,9 +70,9 @@
         </ul>
         <p class="page-main__about-title">Cover Letter:</p>
         <p>Please make sure you submit a cover letter describing why you're interested in Luno and the role and what makes you the right candidate.</p>
-        <p>Digital currencies are rapidly changing the financial landscape, and the Luno team is at the forefront of this revolution. If you’re looking to work on something truly global and disruptive with a smart and ambitious team that highly values diversity, teamwork, and the continuous quest for excellence, then this is the opportunity for you.</p>
-        <p class="page-main__careers--title">2. Compliance Analyst</p>
-        <p>Cryptologi is a top world class cryptocuurency company that operates in more than 40 countries all over the globe, with offices located in strategic places in the different continents in the world. Cryptologi is a company that has been tested and trusted by many top brokers and financial investors, and many have long fallen in love with this financial company. The different services we offer to our clients on a daily basis makes trading simple and fun. With Cryptologi you have nothing to worry about all transactions are 100% secure. Our number one priority is satisfying the need of every of our customers.</p>
+        <p>Digital currencies are and changing the global finacial statosphere and Cryptologi team is rightly positioned at this revolution. Cryptologi is a global financial trading company with an internatinal team of experts that profer solutions to all forms of challenges a trader or investor might encounter in the process of trading.</p>
+        <p class="page-main__careers--title">2. Compliance Analyst - Italy</p>
+        <p>Cryptologi is a top world class cryptocurency company that operates in several countries all over the globe, with offices located in strategic places in the different continents in the world. Cryptologi is a company that has been tested and trusted by many top brokers and financial investors, and many have long fallen in love with this financial company. The different services we offer to our clients on a daily basis makes trading simple and fun. With Cryptologi you have nothing to worry about all transactions are 100% secure. Our number one priority is satisfying the need of every of our customers.</p>
         <p class="page-main__about--title">What you'll do</p>
         <ul>
           <li>Support Cryptologi's compliance efforts across multiple geographies</li>
@@ -99,8 +100,8 @@
           <li>Familiarity with Bitcoin and other crypto-currencies will be highly advantageous</li>
         </ul>
         <p>Digital currencies are rapidly changing the financial landscape, and the Luno team is at the forefront of this revolution. If you’re looking to work on something truly global and disruptive with a smart and ambitious team that highly values diversity, teamwork, and the continuous quest for excellence, then this is the opportunity for you.</p>
-        <p class="page-main__careers--title">3. Senior Software Engineer</p>
-        <p>Cryptologi is a top world class cryptocuurency company that operates in more than 40 countries all over the globe, with offices located in strategic places in the different continents in the world. Cryptologi is a company that has been tested and trusted by many top brokers and financial investors, and many have long fallen in love with this financial company. The different services we offer to our clients on a daily basis makes trading simple and fun. With Cryptologi you have nothing to worry about all transactions are 100% secure. Our number one priority is satisfying the need of every of our customers.</p>
+        <p class="page-main__careers--title">3. Senior Software Engineer - Italy</p>
+        <p>Cryptologi is a top world class cryptocurency company that operates in several countries all over the globe, with offices located in strategic places in the different continents in the world. Cryptologi is a company that has been tested and trusted by many top brokers and financial investors, and many have long fallen in love with this financial company. The different services we offer to our clients on a daily basis makes trading simple and fun. With Cryptologi you have nothing to worry about all transactions are 100% secure. Our number one priority is satisfying the need of every of our customers.</p>
         <p class="page-main__about--title">What you'll do</p>
         <ul>
           <li>As a Software Engineer at Luno, you will work on solving many complicated and interesting problems</li>
@@ -119,7 +120,7 @@
           <li>Be friendly, transparent, articulate and driven to succeed</li>
           <li>A passion for cryptography, security and Bitcoin</li>
         </ul>
-        <p class="page-main--pb">Digital currencies are rapidly changing the financial landscape, and the Luno team is at the forefront of this revolution. If you’re looking to work on something truly global and disruptive with a smart and ambitious team that highly values diversity, teamwork, and the continuous quest for excellence, then this is the opportunity for you.</p>
+        <p class="page-main--pb">Digital currencies are and changing the global finacial statosphere and Cryptologi team is rightly positioned at this revolution. Cryptologi is a global financial trading company with an internatinal team of experts that profer solutions to all forms of challenges a trader or investor might encounter in the process of trading.</p>
       </div>
     </div>
   </main>
