--- a/assets/templates/crypto/template/faq.html
+++ b/assets/templates/crypto/template/faq.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>FAQ - Cryptologi</title>
   <link rel="stylesheet" href="../css/styll.css">
-  <link rel="stylesheet" href="../css/adaptiv.css">
+  <link rel="stylesheet" href="../css/adapti.css">
   <link href="https://fonts.googleapis.com/css?family=PT+Sans" rel="stylesheet">
 </head>
 <body>
