--- a/assets/templates/crypto/template/login.html
+++ b/assets/templates/crypto/template/login.html
@@ -4,10 +4,9 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Registration - CryptoLogi</title>
+  <title>Registration - Cryptologi</title>
   <link rel="stylesheet" href="../css/styleff.css">
   <link rel="stylesheet" href="../css/adaptiveff.css">
-  <link href="https://fonts.googleapis.com/css?family=PT+Sans" rel="stylesheet">
 </head>
 <body class="form__body">
   <section class="modal-login">
