--- a/assets/templates/crypto-b/css/style.css
+++ b/assets/templates/crypto-b/css/style.css
@@ -291,7 +291,7 @@ form a {
 
 .page-header__nav {
   min-height: 80px;
-  background: #070055; }
+  background: #00aeef; }
 
 .page-header__main-nav--s {
   display: none; }
