--- a/assets/templates/crypto-b/sass/global/form.scss
+++ b/assets/templates/crypto-b/sass/global/form.scss
@@ -4,6 +4,10 @@
   // margin-top: 40px;
 }
 
+.page-header__nav--form {
+  background: transparent !important;
+}
+
 .page-header__checkbox {
   display: flex;
   justify-content: space-around;
