--- a/assets/templates/crypto/index.html
+++ b/assets/templates/crypto/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Cryptologi</title>
-  <link rel="stylesheet" href="css/styleff.css">
+  <link rel="stylesheet" href="css/stylef.css">
   <link rel="stylesheet" href="css/adaptiveff.css">
 </head>
 <body>
@@ -39,6 +39,48 @@
         </div>
       </div>
     </div>
+  </section>
+  <section class="coin">
+    <!-- <div class="container"> -->
+      <div class="coin__flex-container">
+        <div class="coin__box  coin__box--bitcoin">
+          <p><span>Bitcoin</span><br>2009</p>
+        </div>
+        <div class="coin__box  coin__box--lite">
+          <p><span>Litecoin</span><br>2011</p>
+        </div>
+        <div class="coin__box  coin__box--doge">
+          <p><span>Dogecoin</span><br>2013</p>
+        </div>
+        <div class="coin__box  coin__box--ripple">
+          <p><span>Ripple</span><br>2013</p>
+        </div>
+        <div class="coin__box  coin__box--peer">
+          <p><span>Peercoin</span><br>2014</p>
+        </div>
+        <div class="coin__box  coin__box--dash">
+          <p><span>Dash</span><br>2014</p>
+        </div>
+        <div class="coin__box  coin__box--monero">
+          <p><span>Monero</span><br>2014</p>
+        </div>
+        <div class="coin__box  coin__box--eth">
+          <p><span>Etherium</span><br>2015</p>
+        </div>
+        <div class="coin__box  coin__box--iota">
+          <p><span>Iota</span><br>2015</p>
+        </div>
+        <div class="coin__box  coin__box--nem">
+          <p><span>Nem</span><br>2015</p>
+        </div>
+        <div class="coin__box  coin__box--zcash">
+          <p><span>Zcash</span><br>2016</p>
+        </div>
+        <div class="coin__box  coin__box--stratis">
+          <p><span>Stratis</span><br>2017</p>
+        </div>
+      </div>
+    <!-- </div> -->
   </section>
   <section class="read">
     <div class="container">
@@ -90,48 +132,6 @@
         </div>
       </div>
     </div>
-  </section>
-  <section class="coin">
-    <!-- <div class="container"> -->
-      <div class="coin__flex-container">
-        <div class="coin__box  coin__box--bitcoin">
-          <p><span>Bitcoin</span><br>2009</p>
-        </div>
-        <div class="coin__box  coin__box--lite">
-          <p><span>Litecoin</span><br>2011</p>
-        </div>
-        <div class="coin__box  coin__box--doge">
-          <p><span>Dogecoin</span><br>2013</p>
-        </div>
-        <div class="coin__box  coin__box--ripple">
-          <p><span>Ripple</span><br>2013</p>
-        </div>
-        <div class="coin__box  coin__box--peer">
-          <p><span>Peercoin</span><br>2014</p>
-        </div>
-        <div class="coin__box  coin__box--dash">
-          <p><span>Dash</span><br>2014</p>
-        </div>
-        <div class="coin__box  coin__box--monero">
-          <p><span>Monero</span><br>2014</p>
-        </div>
-        <div class="coin__box  coin__box--eth">
-          <p><span>Etherium</span><br>2015</p>
-        </div>
-        <div class="coin__box  coin__box--iota">
-          <p><span>Iota</span><br>2015</p>
-        </div>
-        <div class="coin__box  coin__box--nem">
-          <p><span>Nem</span><br>2015</p>
-        </div>
-        <div class="coin__box  coin__box--zcash">
-          <p><span>Zcash</span><br>2016</p>
-        </div>
-        <div class="coin__box  coin__box--stratis">
-          <p><span>Stratis</span><br>2017</p>
-        </div>
-      </div>
-    <!-- </div> -->
   </section>
   <section class="trading">
     <div class="container">
