--- a/assets/templates/crypto-b/templates/about.html
+++ b/assets/templates/crypto-b/templates/about.html
@@ -10,7 +10,7 @@
 <body>
   <header class="page-header  page-header--blue">
     <div class="page-header__head">
-      <nav class="page-header__nav">
+      <nav class="page-header__nav  page-header__nav--rules">
         <div class="container">
           <div class="page-header__flex">
             <div class="page-header__logo">
@@ -40,8 +40,8 @@
     <div class="container">
       <div class="page-header__rules">
         <h1>About Us</h1>
-        <p>+500crypto is a multi-functional digital currency exchange that is highly trust worthy. It offers a cross-platform trading via website,<br>mobile application, web socket and API providing accesss to high liquidity orderbook for top currency pairs on the market.<br>Very fast Bitcoin buying and selling is possible through simplified bundle interface. The exchange has developed a multi-level account<br>system with individual approach to each customer, from Bitcoin learner to institutional professional traders.</p>
-        <p class="page-header--pb">With +500crypto you get worldwide coverage, mulitiple payement options, and 24/7 support accompanied by time-proven platform<br>stability that guarantees safty of assets and data. We provide all individuals and businesses a  world class experience to trade Bitcoin<br>and other crypto currencies. +500crypto is absolutely the go-to site for traders and investors when you demand a quick trade transaction,<br>stable wallets and advanced security practices. +500crypto is the right place to be!</p>
+        <p>+500crypto is a multi-functional digital currency exchange that is highly trust worthy. It offers a cross-platform trading via website, mobile application, web socket and API providing accesss to high liquidity orderbook for top currency pairs on the market. Very fast Bitcoin buying and selling is possible through simplified bundle interface. The exchange has developed a multi-level account system with individual approach to each customer, from Bitcoin learner to institutional professional traders.</p>
+        <p class="page-header--pb">With +500crypto you get worldwide coverage, mulitiple payement options, and 24/7 support accompanied by time-proven platform stability that guarantees safty of assets and data. We provide all individuals and businesses a  world class experience to trade Bitcoin and other crypto currencies. +500crypto is absolutely the go-to site for traders and investors when you demand a quick trade transaction, stable wallets and advanced security practices. +500crypto is the right place to be!</p>
       </div>
     </div>
   </header>
