--- a/assets/templates/crypto-b/templates/faq.html
+++ b/assets/templates/crypto-b/templates/faq.html
@@ -10,7 +10,7 @@
 <body>
   <header class="page-header  page-header--blue">
     <div class="page-header__head">
-      <nav class="page-header__nav">
+      <nav class="page-header__nav  page-header__nav--rules">
         <div class="container">
           <div class="page-header__flex">
             <div class="page-header__logo">
