--- a/assets/templates/crypto/css/stylef.css
+++ b/assets/templates/crypto/css/stylef.css
@@ -254,16 +254,20 @@ body {
 
 .coin {
   min-height: 125px;
-  background: rgba(175, 181, 156, 0.9);
-	border-top: 2px solid black;
+  background: rgba(175, 181, 156, 0.8);
+	/* border-top: 2px solid black; */
 	border-bottom: 2px solid black;
+	transition: 0.3s;
+	z-index: 1;
 }
 
 .coin-bg {
 	position: fixed;
 	bottom: 0;
 	width: 100%;
+	border-top: 2px solid black;
 	opacity: 0.9;
+	transition: 0.3s;
 }
 
 .coin__box {
