--- a/assets/templates/crypto/template/form.html
+++ b/assets/templates/crypto/template/form.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Login - CryptoLogi</title>
-  <link rel="stylesheet" href="../css/styleff.css">
+  <link rel="stylesheet" href="../css/stylef.css">
   <link rel="stylesheet" href="../css/adaptiveff.css">
 </head>
 <body class="form__body">
