--- a/assets/templates/crypto-b/sass/blocks/crypto.scss
+++ b/assets/templates/crypto-b/sass/blocks/crypto.scss
@@ -1,6 +1,6 @@
 .crypto {
   position: relative;
-  min-height: 635px;
+  // min-height: 635px;
   background: #000 url("../img/crypto-bg.png") no-repeat bottom;
   background-size: cover;
   border-bottom: 10px solid #e94444;
@@ -31,6 +31,7 @@
     align-self: flex-end;
     padding: 10px 60px;
     margin-top: 70px;
+    margin-bottom: 150px;
     color: #000;
     font-size: 25px;
     font-weight: 400;
@@ -81,6 +82,7 @@
     & a {
       align-self: center;
       margin-top: 50px;
+      margin-bottom: 50px;
       color: #000;
       font-size: 20px;
     }
@@ -116,6 +118,7 @@
     & a {
       align-self: center;
       margin-top: 50px;
+      margin-bottom: 50px;
       color: #000;
       font-size: 18px;
     }
