--- a/assets/templates/crypto/template/legal.html
+++ b/assets/templates/crypto/template/legal.html
@@ -5,8 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Legal - Cryptologi</title>
-  <link rel="stylesheet" href="../css/stylef.css">
-  <link rel="stylesheet" href="../css/adaptiveff.css">
+  <link rel="stylesheet" href="../css/styleshe.css">
+  <link rel="stylesheet" href="../css/mediashe.css">
 </head>
 <body>
   <header class="page-header  page-header--about">
