--- a/assets/templates/crypto/index.html
+++ b/assets/templates/crypto/index.html
@@ -5,8 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Cryptologi</title>
-  <link rel="stylesheet" href="css/styleshe.css">
-  <link rel="stylesheet" href="css/mediashe.css">
+  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="css/media.css">
 </head>
 <body>
   <header class="page-header">
